# lib-bitum

./: Cargo.toml
derive/: Cargo.toml
derive/src/: crc.rs  crc16.rs  crc8.rs  crc_ctor.rs  des.rs  lib.rs  ser.rs
src/: bit_pos.rs  bits.rs  bitum.rs  crc.rs  des.rs  des_bool.rs  des_num.rs  des_slice.rs  lib.rs  main.rs  ser.rs  ser_bool.rs  ser_num.rs  ser_option.rs  ser_slice.rs  util.rs
tests/: bit_pos.rs  crc.rs  crc16.rs  crc8.rs  lib.rs  ser.rs
