[package]
name = "bitum"
version = "0.7.0"
authors = ["Valery Klachkov <zgdump@gmail.com>"]
license = "Apache-2.0"
description = "Binary structures serialization and deserialization library."
repository = "https://github.com/zgdump/lib-bitum"
readme = "README.md"
edition = "2021"

[dependencies]
bitum-derive = { version = "0.3.0", path = "derive" }

[dev-dependencies]

[workspace]
members = ["derive"]

[features]