[package]
name = "bitum-derive"
version = "0.2.0"
authors = ["Valery Klachkov <zgdump@gmail.com>"]
license = "Apache-2.0"
description = "Derive macros for bitum."
repository = "https://github.com/zgdump/lib-bitum"
edition = "2021"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
darling = "0.13"